5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1578_996.log
== TEST (2019-03-13 09:17:35) 
-- CODE:
print("*****
		* o o *
		* ^ *
		* --- *
		*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    print("*****
               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:18:13) 
-- CODE:
print("*****
		* o o *
		* ^ *
		* --- *
		*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    print("*****
               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:21:59) 
-- CODE:
print("*")("*")("*")("*")("*")
		* o o *
		* ^ *
		* --- *
		*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 2
    * o o *
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:26:03) 
-- CODE:
print(" *****")
print("* o o * ")
print(" * ^ * ")
print(" * --- * ")
print(" ***** ")
-- OUTPUT:
*****
* o o * 
 * ^ * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:29:12) 
-- CODE:
print(" ***** ")
print("* o o * ")
print(" * ^ * ")
print(" * --- * ")
print(" ***** ")
-- OUTPUT:
***** 
* o o * 
 * ^ * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:31:07) 
-- CODE:
print(" ***** ")
print("* o o * ")
print(" * ^ * ")
print(" * --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.211425
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
 * ^ * 
 * --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:31:57) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:32:25) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:33:19) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:33:54) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:37:26) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:39:15) 
-- CODE:
print("*****")
print("* o o *")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:41:14) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:09:37) 
-- CODE:
print("*****");
print("* o o *");
print("* ^ *");
print("* --- *");
print("*****");

-- OUTPUT:
*****
* o o *
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:10:35) 
-- CODE:
print("   *****");
print("  * o o *");
print("  *  ^  *");
print("  * --- *");
print("   *****");

-- OUTPUT:
*****
  * o o *
  *  ^  *
  * --- *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:11:04) 
-- CODE:
print("   *****");
print(" (* o o *)");
print("  *  ^  *");
print("  * --- *");
print("   *****");

-- OUTPUT:
*****
 (* o o *)
  *  ^  *
  * --- *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:11:14) 
-- CODE:
print("   *****");
print(" (* o o *)");
print("  *  ^  *");
print("  * --- *");
print("   *****");

-- EXECUTION TIME:
0.180056
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  * --- *
   *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
